# compress-everything

./: Cargo.toml
src/: main.rs
